compiler/test-data/parser/contract/errors/unclosed_brace.frel
module contract.errors.unclosed_brace

contract UserAPI {
    get_user(id: Uuid) : User
